// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses \`\`\` code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "code",
  },
]
`;

exports[`parses ~~~ code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "code",
  },
]
`;

exports[`parses double nested todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": false,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "todo-list",
  },
]
`;

exports[`parses heading1 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "heading1",
  },
]
`;

exports[`parses heading2 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "heading2",
  },
]
`;

exports[`parses heading3 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "heading3",
  },
]
`;

exports[`parses heading4 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "heading4",
  },
]
`;

exports[`parses heading5 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "heading5",
  },
]
`;

exports[`parses heading6 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "heading6",
  },
]
`;

exports[`parses indented code blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "code",
  },
]
`;

exports[`parses indented list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses interesting nesting 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses link 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses link with encoded characters 1`] = `Array []`;

exports[`parses link within mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses list with trailing item 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
]
`;

exports[`parses mixed list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses nested todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {
          "checked": false,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "todo-list",
  },
]
`;

exports[`parses ordered list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses ordered list items with different numbers 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses ordered list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "ordered-list",
  },
]
`;

exports[`parses paragraph 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses quote 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "block-quote",
  },
]
`;

exports[`parses quote with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "kind": "text",
        "leaves": Array [
          Object {
            "kind": "leaf",
            "marks": Array [],
            "text": "",
          },
        ],
      },
    ],
    "type": "block-quote",
  },
]
`;

exports[`parses tables 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-head",
          },
        ],
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
        ],
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
        ],
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "",
                  },
                ],
              },
            ],
            "type": "table-cell",
          },
        ],
        "type": "table-row",
      },
    ],
    "type": "table",
  },
]
`;

exports[`parses todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {
          "checked": false,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "todo-list",
  },
]
`;

exports[`parses todo list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "kind": "block",
    "nodes": Array [
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": true,
        },
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "",
              },
            ],
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "todo-list",
  },
]
`;
